--- a/memoryleak/index.html
+++ b/memoryleak/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="main.js"></script>
 </head>
 <body>
-    
+    <!-- <button id="dom">create dom</button> -->
+    <!-- <button id="create">create dom</button> -->
+    <!-- <button id="grow">grow</button>
+    <button id="free">free</button>
+    <button id="remove">remove all</button> -->
+
+    <!-- <button id="create">create instance</button>
+    <button id="call">call instance</button>
+    <button id="remove">remove instance</button> -->
+
+    <button id="grow">grow</button>
+    <!-- <button id="grow">grow</button>
+    <button id="free">free</button>
+    <button id="remove">remove all</button> -->
+
+
+    <!-- <script type="module" src="./main.js"></script> -->
+    <!-- <script type="module" src="./detachednode.js"></script> -->
+    <script type="module" src="./heap.js"></script>
+
+    <!-- <script type="module" src="./memory.js"></script> -->
+    <!-- <script type="module" src="./allocationtimeline.js"></script> -->
+    <!-- <script type="module" src="./taskmanager.js"></script> -->
+    <!-- <script type="module" src="./performance.js"></script> -->
+    <!-- <script type="module" src="./dom.js"></script> -->
+
 </body>
 </html>
