--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- <link rel="stylesheet" href="style.css" /> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r127/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/immer"></script>
-    <script src="practice.js"></script>
+    <!-- <script src="practice.js"></script> -->
     <style>
       div{
         min-width: 100px;
@@ -40,6 +40,10 @@
     <div id="myDiv">Click me and press a key!</div> -->
 
     <!-- <script src="customevent.js"></script> -->
-    <!-- <script src="practice1.js"></script> -->
+    <script src="practice.js"></script>
+    <!-- <script src="promise.js"></script> -->
+    <!-- <script src="closure.js"></script> -->
+    <!-- <script src="ayncawait.js"></script> -->
+
   </body>
 </html>
