--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     <div id="myDiv">Click me and press a key!</div> -->
 
     <!-- <script src="customevent.js"></script> -->
-    <script src="practice.js"></script>
+    <!-- <script src="practice.js"></script> -->
     <!-- <script src="promise.js"></script> -->
     <!-- <script src="closure.js"></script> -->
-    <!-- <script src="ayncawait.js"></script> -->
+    <script src="ayncawait.js"></script>
 
   </body>
 </html>
