--- a/memoryleak/index.html
+++ b/memoryleak/index.html
@@ -17,6 +17,7 @@
     <button id="remove">remove instance</button> -->
 
     <button id="grow">grow</button>
+    <button id="delete">delete node</button>
     <!-- <button id="grow">grow</button>
     <button id="free">free</button>
     <button id="remove">remove all</button> -->
@@ -24,13 +25,21 @@
 
     <!-- <script type="module" src="./main.js"></script> -->
     <!-- <script type="module" src="./detachednode.js"></script> -->
-    <script type="module" src="./heap.js"></script>
+    <!-- <script type="module" src="./heap.js"></script> -->
 
     <!-- <script type="module" src="./memory.js"></script> -->
     <!-- <script type="module" src="./allocationtimeline.js"></script> -->
     <!-- <script type="module" src="./taskmanager.js"></script> -->
     <!-- <script type="module" src="./performance.js"></script> -->
     <!-- <script type="module" src="./dom.js"></script> -->
-
+    <script type="module" src="./practice.js"></script>
+     <!-- <script type="module" src="./memoryterminology/objectsize.js"></script> -->
+     <!-- <script type="module" src="./memoryterminology/shallowsize.js"></script> -->
+     <!-- <script type="module" src="./taskmanager/memory.js"></script> -->
+    <!-- <script type="module" src="./taskmanager/javascriptmemory.js"></script> -->
+    <!-- <script type="module" src="./performancerecording/performance.js"></script> -->
+     <!-- <script type="module" src="./heapsnapshots/detachednode.js"></script> -->
+      <!-- <script type="module" src="./allocationtimeline/allocation.js"></script> -->
+       <!-- <script type="module" src="./heapsnapshots//specialentrites.js"></script> -->
 </body>
 </html>
