--- a/promise/index.html
+++ b/promise/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <div>Keyevent</div> -->
-    <script src="./index.js"></script>
+    <div>Hello</div>
+    <script src="index.js"></script>
 </body>
 </html>
