--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/immer"></script>
     <!-- <script src="practice.js"></script> -->
     <style>
-      div{
+      div {
         min-width: 100px;
         min-height: 100px;
         padding: 30px;
@@ -19,31 +19,9 @@
     </style>
   </head>
   <body>
-       <!-- <h1>The rotate() Method</h1>
-
-    <p>
-      The rotate() method rotates an element clockwise or counter-clockwise.
-    </p>
-
-    <div>This a normal div element.</div>
-
-    <div id="myDiv">This div element is rotated clockwise 20 degrees.</div> -->
-    <!-- <div id="grandparent">
-      <div id="parent">
-        <div id="child"></div>
-      </div>
-    </div> -->
-    
-    <!-- worker it is a background thread -->
-    <!-- <button id="sum">calculate sum</button>
-    <button id="color">changebackground color</button>
-    <div id="myDiv">Click me and press a key!</div> -->
-
-    <!-- <script src="customevent.js"></script> -->
+    <button id="click" style="border: 1px solid red; font-size: 30px">
+      click
+    </button>
     <script src="practice.js"></script>
-    <!-- <script src="promise.js"></script> -->
-    <!-- <script src="closure.js"></script> -->
-    <!-- <script src="ayncawait.js"></script> -->
-
   </body>
 </html>
