--- a/memoryleak/index.html
+++ b/memoryleak/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- <button id="dom">create dom</button> -->
     <!-- <button id="create">create dom</button> -->
     <!-- <button id="grow">grow</button>
@@ -22,7 +22,6 @@
     <button id="free">free</button>
     <button id="remove">remove all</button> -->
 
-
     <!-- <script type="module" src="./main.js"></script> -->
     <!-- <script type="module" src="./detachednode.js"></script> -->
     <!-- <script type="module" src="./heap.js"></script> -->
@@ -32,14 +31,15 @@
     <!-- <script type="module" src="./taskmanager.js"></script> -->
     <!-- <script type="module" src="./performance.js"></script> -->
     <!-- <script type="module" src="./dom.js"></script> -->
-    <script type="module" src="./practice.js"></script>
-     <!-- <script type="module" src="./memoryterminology/objectsize.js"></script> -->
-     <!-- <script type="module" src="./memoryterminology/shallowsize.js"></script> -->
-     <!-- <script type="module" src="./taskmanager/memory.js"></script> -->
+    <!-- <script type="module" src="./practice.js"></script> -->
+    <script type="module" src="./closure/index.js"></script>
+    <!-- <script type="module" src="./memoryterminology/objectsize.js"></script> -->
+    <!-- <script type="module" src="./memoryterminology/shallowsize.js"></script> -->
+    <!-- <script type="module" src="./taskmanager/memory.js"></script> -->
     <!-- <script type="module" src="./taskmanager/javascriptmemory.js"></script> -->
     <!-- <script type="module" src="./performancerecording/performance.js"></script> -->
-     <!-- <script type="module" src="./heapsnapshots/detachednode.js"></script> -->
-      <!-- <script type="module" src="./allocationtimeline/allocation.js"></script> -->
-       <!-- <script type="module" src="./heapsnapshots//specialentrites.js"></script> -->
-</body>
+    <!-- <script type="module" src="./heapsnapshots/detachednode.js"></script> -->
+    <!-- <script type="module" src="./allocationtimeline/allocation.js"></script> -->
+    <!-- <script type="module" src="./heapsnapshots//specialentrites.js"></script> -->
+  </body>
 </html>
