--- a/performance/index.html
+++ b/performance/index.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <!-- <script type="module" src="debounce.js"></script> -->
-</head>
-<body>
-    <input type="text" id="hello">
+    <style>
+      div {
+        min-width: 100px;
+        min-height: 100px;
+        padding: 30px;
+        border: 1px solid black;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="grandparent">
+      <div id="parent">
+        <div id="child"></div>
+      </div>
+    </div>
+    <input type="text" id="hello" />
     <button id="button">button</button>
-    <!-- <script src="debounce.js"></script> -->
-    <!-- <script src="throtlling.js"></script> -->
     <script src="practice.js"></script>
-</body>
+  </body>
 </html>
