--- a/closure/index.html
+++ b/closure/index.html
@@ -6,8 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <div>Hello</div>
-    <!-- <script src="promise.js"></script> -->
-    <script src="debug.js"></script>
+    <script src="./closure.js"></script>
   </body>
 </html>
