--- a/prototype/index.html
+++ b/prototype/index.html
@@ -6,8 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div>Hello</div>
-    <!-- <script src="promise.js"></script> -->
+    <!-- <script src="prototype.js"></script> -->
     <script src="debug.js"></script>
   </body>
 </html>
