precedence and associativity

--- a/precedenceassociativity/index.html
+++ b/precedenceassociativity/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="debug.js"></script>
+    <script src="precedence.js"></script>
 </body>
 </html>
